<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/dash_wall"
    tools:context="app.security.zimcan.zimcan.Dashboard">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="34sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:text="@string/panic_situation"
             />

        <EditText
            android:id="@+id/panicDescription"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:background="@color/editTextBackground"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/enter_details_of_situation"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/sendPanic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center_horizontal"
            android:text="@string/send" />

        <ImageView
            android:id="@+id/panicImage"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="270dp"
            android:src="@mipmap/uploadimage" />


    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>
